--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,18 +1,19 @@
-cmake_minimum_required(VERSION 3.25)
+cmake_minimum_required(VERSION 3.24)
 project(ids)
 
 set(CMAKE_CXX_STANDARD 17)
 
 set(PCAPPLUSPLUS_INCLUDE_DIR "/usr/include/pcapplusplus")
 set(PCAPPLUSPLUS_LIB_DIR "/usr/lib/pcapplusplus")
-include_directories(${PCAPPLUSPLUS_INCLUDE_DIR})
-link_directories(${PCAPPLUSPLUS_LIB_DIR})
 
-add_executable(ids src/main.cpp include/utils/MyUtils.h src/packets/PacketReader.cpp include/packets/PacketReader.h src/packets/BasicPacketInfo.cpp include/packets/BasicPacketInfo.h src/flow/FlowGenerator.cpp include/flows/FlowGenerator.h src/flow/BasicFlow.cpp include/flows/BasicFlow.h src/utils/FileNameUtil.cpp include/utils/FileNameUtil.h src/flow/FlowListener.cpp include/flows/FlowListener.h src/flow/FlowFeature.cpp include/flows/FlowFeature.h src/csv/InsertCsvRow.cpp include/csv/InsertCsvRow.h src/utils/IdGenerator.cpp include/utils/IdGenerator.h src/utils/DateFormatter.cpp include/utils/DateFormatter.h src/utils/MyUtils.cpp)
+file(GLOB_RECURSE SOURCE src/*.cpp)
 
+add_executable(ids ${SOURCE})
+target_link_directories(ids PRIVATE ${PCAPPLUSPLUS_LIB_DIR})
 target_link_libraries(${PROJECT_NAME} Pcap++ Packet++ Common++ pcap pthread)
 
 target_include_directories(ids PRIVATE
+        ${PCAPPLUSPLUS_INCLUDE_DIR}
         ${CMAKE_CURRENT_SOURCE_DIR}/include
         ${CMAKE_CURRENT_SOURCE_DIR}/include/flows
         ${CMAKE_CURRENT_SOURCE_DIR}/include/utils
